syntax = "proto3";

package pb;

option go_package = "github.com/justinsb/kweb/components/keystore/pb";

message KeySetData {
  repeated KeyData keys = 1;
  int32 active_id = 2;
}

message KeyData {
  int32 id = 1;
  bytes secret = 2;
  int64 created = 3;
  KeyType key_type = 4;
}

enum KeyType {
  KEYTYPE_UNKNOWN = 0;
  KEYTYPE_SECRETBOX = 1;
  KEYTYPE_RSA = 2;
}

enum EncryptionMethod {
  ENCRYPTIONMETHOD_UNKNOWN = 0;
  ENCRYPTIONMETHOD_SECRETBOX = 1;
}

message EncryptedData {
  EncryptionMethod encryption_method = 1;
  int32 key_id = 2;
  bytes nonce = 3;
  bytes ciphertext = 4;
}